[package]
name = "poseidon-node"
version = "0.1.0"
authors = ["Sora Suegami"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poseidon-rs = { path = "../poseidon" }
halo2curves = { version = "0.7.0", git = "https://github.com/privacy-scaling-explorations/halo2curves.git" }
hex = "0.4.3"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
