[package]
name = "poseidon-rs"
version = "0.0.10"
authors = ["arnaucube <root@arnaucube.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Poseidon hash implementation"
repository = "https://github.com/arnaucube/poseidon-rs"
readme = "README.md"

[dependencies]
serde = { version = "1.0", default-features = false }
# ff = { version = "0.13.0", default-features = false, features = [
#     "std",
#     "derive",
# ] }
halo2curves = { version = "0.7.0", git = "https://github.com/privacy-scaling-explorations/halo2curves.git", default-features = false }
# rand = { version = "0.8.5", default-features = false }
once_cell = "1.18.0"
thiserror = "1.0.43"

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["custom"] }


[dev-dependencies]
criterion = "0.5.1"

[features]
default = ["halo2curves/default"]

[target.'cfg(target_family = "wasm")'.features]
default = ["halo2curves/bits"]

[[bench]]
name = "bench_poseidon_hash"
harness = false
